--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <title>yet another PDF reader</title>
 
         <link rel="stylesheet" href="style.css">
+        
+        <!-- PDF.js-->
+        <script src="https://www.jsdelivr.com/package/npm/pdfjs-dist"></script>
     </head>
     <body>
         <h1 id="thing">yet another PDF reader</h1>
